--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="menu"></div>
     <div id="root"> </div>
+    <!-- <iframe src="doge.html" title="description"></iframe> -->
   </body>
 </html>
